# tpt-software-api

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
payroll/: api.py  cli.py  config.py  exceptions.py  logging.py  main.py  models.py  utils.py
payroll/auth/: models.py  service.py  views.py
payroll/contracttype/: models.py  service.py  views.py
payroll/database/: core.py  manage.py
payroll/department/: models.py  service.py  views.py
payroll/jobtitle/: models.py  service.py  views.py
